k8s/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
      - name: auth-service

        image: auth-service:v1

        imagePullPolicy: Never

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"
