k8s/auth-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service

spec:
  selector:
    app: auth-service

  ports:
  - port: 8000
    targetPort: 8000

  type: ClusterIP
