k8s/auth-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: auth-service-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: auth.frontend.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: auth-service

            port:
              number: 8000
